--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.11",
     "@astrojs/tailwind": "^5.1.0",
-    "tailwindcss": "^3.4.0",
+    "@astrojs/vercel": "^8.2.7",
+    "astro": "^5.7.11",
     "framer-motion": "^11.0.0",
-    "lucide": "^0.400.0"
+    "lucide": "^0.400.0",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
